# Aura

./: .env.example  .gitattributes  .gitignore  README.md  launch_aura.vbs  launch_demo.bat  pyproject.toml  requirements-xtts.txt  requirements.txt
docs/: GITHUB_AUDIT.md  JARVIS_CERTIFICATION.md  RELEASE_REPORT.md  SECURITY_REPORT.md  XTTS_ACTIVATION_REPORT.md  architecture.md
qml/: AIOrb.qml  ExecutionFeed.qml  FutureHUD.qml  MemoryCards.qml  ParticleField.qml  RotatingRing.qml  StartupSequence.qml  StatusPanel.qml  Waveform.qml
src/aura/: __init__.py  actions.py  audio_io.py  config.py  conversation_context.py  conversation_model.py  executive_agent.py  future_gui.py  gui.py  hardware_profile.py  llm.py  main.py  memory_store.py  models.py  orchestrator.py  planner.py  research.py  result_revealer.py  safety.py  stt.py  tts.py  xtts_backend.py
tests/: jarvis_acceptance.py  live_desktop_integration.py  live_xtts_activation.py  t10_executive_agent.py  t11_visibility_policy.py  t1_ollama_health.py  t2_fast_path.py  t3_conversation.py  t4_memory.py  t5_planner_isolation.py  t6_thread_safety.py  t7_offline.py  t8_streaming.py  t9_tool_calling.py  test_hardware_profile.py  test_model_switching.py  test_xtts_backend.py
tools/: diagnostics.py
